A feature to set the border color of the element enclosing the image, so it is easy to mark the images we are comparing

--- a/trace-processing/showGraphs/index.html
+++ b/trace-processing/showGraphs/index.html
@@ -5,12 +5,13 @@
   </head>
   <body>
     <p>
-      <div id="main">
-	<div class="float">
+      <div id="main" class="float">
+	<div class="float-border" id="div0">
 	  <input type="file" id="file0" />
+	  <input type="color" id="color0" align="right" value="#008000">
 	  <output id="output0"></output>
 	</div>
-	</div>
+      </div>
 
       <script src="showfile.js"></script>
 
