A feature so you can remove a rendered image by clicking a button. Code cleanup.

--- a/trace-processing/showGraphs/index.html
+++ b/trace-processing/showGraphs/index.html
@@ -7,8 +7,12 @@
     <p>
       <div id="main" class="float">
 	<div class="float-border" id="div0">
+	  <input type="color" id="color0"
+		 value="#008000" class = "color-input">
 	  <input type="file" id="file0" />
-	  <input type="color" id="color0" align="right" value="#008000">
+	  <div class="float-right" id="div-close0">
+	    <a href="#" class="close-icon" id="close0"></a>
+	  </div>
 	  <output id="output0"></output>
 	</div>
       </div>
