--- a/trace-processing/showGraphs/stateTransitionCharts.html
+++ b/trace-processing/showGraphs/stateTransitionCharts.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
-    <p>
       <div id="main" class="float">
-	<div class="float-border" id="div0">
-	  <output id="output0">
+	<div class="float-border">
+	  <output>
 	    <p><strong>#Thread</strong>
 	    <p><a href="#htmlFile">
 		<img src="#imageFile"/>
@@ -15,16 +8,3 @@
 	  </output>
 	</div>
       </div>
-      <div id="main" class="float">
-	<div class="float-border" id="div0">
-	  <output id="output0">
-	    <p><strong>#Thread</strong>
-	    <p><a href="#htmlFile">
-		<img src="#imageFile"/>
-		</a>
-	  </output>
-	</div>
-      </div>
-
-  </body>
-</html>
